--- a/sass/styles/custom.scss
+++ b/sass/styles/custom.scss
@@ -171,6 +171,7 @@
         .mp_tab_details{
             width: 80%;
             padding: 2% 5%;
+            overflow: hidden;
             h2.mp_tab_item_title{
                 padding: 0;
                 color: $color-black;
